# crowdemopc

./: CMakeLists.txt  README.md  websocket_test.html
src/gateway/: CMakeLists.txt  main.cpp
src/gateway/conf/: server.yaml
src/gateway/controller/: api_controller.cpp  api_controller.h  calculator_controller.cpp  calculator_controller.h  health_controller.cpp  health_controller.h  hello_controller.cpp  hello_controller.h  route_config.h  websocket_controller.cpp  websocket_controller.h
src/gateway/middleware/: route_middleware.h
src/gateway/service/: api_service.cpp  api_service.h  calculator_service.cpp  calculator_service.h  health_service.cpp  health_service.h  hello_service.cpp  hello_service.h
src/gateway/util/: config.cpp  config.h  logger.cpp  logger.h  request_util.cpp  request_util.h  response_util.cpp  response_util.h
src/user_service/: CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  build_proto.sh  main.cpp  start_service.sh  test_client.cpp  test_system.sh
src/user_service/controller/: user_controller.cpp  user_controller.h
src/user_service/proto/: user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h  user.proto
src/user_service/service/: grpc_service_impl.cpp  grpc_service_impl.h  user_client.cpp  user_client.h  user_service.cpp  user_service.h
src/user_service/util/: logger.cpp  logger.h
testcrow/: client.cpp  server.cpp
testetcd/: discovery.h  etcd_client.cpp  etcd_server.cpp  registry.h
testlog/: logger_demo  logger_example.cpp
